--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header-block">
                 <div class="header__logo">
-                    <img src="" alt="logo">                    
+                    <img src="img/Opravy (3).png" alt="logo">                    
                 </div>
                 <div class="header__info">
                     <div class="header__contacts">
