--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header-block">
                 <div class="header__logo">
-                    <img src="img/logo.png" alt="logo">                    
+                    <img src="img/Logo@1X.png" alt="logo">                    
                 </div>
                 <div class="header__info">
                     <div class="header__contacts">
@@ -26,5 +26,42 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="main">
+            <div class="container">
+                <div class="main-block">
+                    <div class="main-text">
+                        <h1 class="main-text__title">Dekorace vnitřních prostorů "na klíč"</h1>
+                        <span class="main-text__subtitle">se zárukou kvality stanovené ve smlouvě</span>
+                        <ul class="main-list">
+                            <li class="main-list__item">
+                                <div class="main-list__image">
+                                    <img src="img/clock.png" alt="hodiny">
+                                </div>
+                                <div class="main-list__text">Přesně dodržujeme termíny</div>
+                            </li>
+                            <li class="main-list__item">
+                                <div class="main-list__image">
+                                    <img src="img/calculator@1X.png" alt="kalkulator">
+                                </div>
+                                <div class="main-list__text">Vypočítáme náklady práce a materiálů ve stejný den poptávky</div>
+                            </li>
+                            <li class="main-list__item">
+                                <div class="main-list__image">
+                                    <img src="img/paint.png" alt="paleta">
+                                </div>
+                                <div class="main-list__text">Nabídneme vám více než 100 možností provedení designu vašeho</div>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                    <div class="main-image">
+                        <img src="img/main-img.png" alt="rozpoložení bytu">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
