kodování sekce s nabídkou, mobilní verze

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,25 @@
                 </div>
             </div>
         </section>
+
+        <section class="offer">
+            <div class="container">
+                <div class="offer-block">
+                    <h2 class="offer-title">Bezplatně vypracujeme  design-projekt pro Váš domov a realizujeme ho!
+                    </h2>
+                    <span class="offer-subtitle">Zanechte poptávku pro vypracování  bezplatného design-projektu!</span>
+                    <form action="#" class="form offer__form">
+                        <input type="text" class="input offer__input" placeholder="vaše jméno">
+                        <input type="tel" class="input offer__input" placeholder="váš telefon">
+                        <button class="button offer__button">Získejte bezplatný design-projekt 
+
+                        </button>
+                    </form>
+                    <span class="offer-addition">Náš manažer vám zavolá v průběhu 60 sekund</span>
+                    <span class="offer-supplement">nebo nám zavolejte sami <a href="#" class="offer-call">+420 777 666 333</a></span>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
