--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                         <span class="header__address">Praha</span>
                         <a href="#" class="header__phone">+420 777 666 333</a>
                     </div>
-                    <button class="button header__button">Zavolejte mi </button>
+                    <button class="button header__button" id="button">Zavolejte mi </button>
                 
                 </div>
             </div>
@@ -82,5 +82,14 @@
             </div>
         </section>
     </main>
+
+    <div class="modal" id="modal">
+        <div class="modal-dialog">
+            <button class="modal-dialog__close" id="close">&times;</button>
+            <h4 class="modal-dialog__title">modální okno</h4>
+        </div>
+    </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
