--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Housefix</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -81,6 +82,33 @@
                 </div>
             </div>
         </section>
+
+        <section class="portfolio">
+            <div class="container">
+                <h2 class="section-title portfolio__title">Za dobu práce od roku 2007, <br>
+                    jsme realizovali více než 500 oprav bytů a domů
+                </h2>
+
+                <div class="slider">
+                    <div class="slider_item"><img class="slider__image" src="img/portfolio1.jpeg" alt="obrazek1"></div>
+                    <div class="slider_item"><img class="slider__image" src="img/portfolio1.jpeg" alt="obrazek1"></div>
+                    <div class="slider_item"><img class="slider__image" src="img/portfolio1.jpeg" alt="obrazek1"></div>
+                    <div class="slider_item"><img class="slider__image" src="img/portfolio1.jpeg" alt="obrazek1"></div>
+                    <div class="slider_item"><img class="slider__image" src="img/portfolio1.jpeg" alt="obrazek1"></div>
+                    <div class="slider_item"><img class="slider__image" src="img/portfolio1.jpeg" alt="obrazek1"></div>
+                </div>
+
+                <div class="arrows portfolio__arrows">
+                    <div class="arrows__left">
+                        <img src="img/left-arrow.png" alt="left arrow">
+                    </div>
+                    <div class="arrows__right">
+                        <img src="img/right-arrow.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
 
     <div class="modal" id="modal">
@@ -90,6 +118,8 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
