kodování sekce s krokami, mobilní verze

--- a/src/index.html
+++ b/src/index.html
@@ -178,6 +178,54 @@
                 </div>
             </div>
         </section>  
+
+        <section class="steps">
+            <div class="container">
+                <h2 class="section-title steps__title">Naši experti jsou připraveni k změření <br> kdykoli se Vám to hodí</h2>
+                <span class="section-subtitle steps__subtitle">5 kroků k renovaci</span>
+                <div class="icons">
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/item1.png" alt="ikon">
+                        </div>
+                        <span class="icon__text">Voláte nám nebo zanecháváte požadavek</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/clock.png" alt="ikon">
+                        </div>
+                        <span class="icon__text"> Dohodneme se na čase pro změření vašeho objektu</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/item2.png" alt="ikon">
+                        </div>
+                        <span class="icon__text">Vypočítáme rozpočet a schválíme ho s vámi</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/item3.png" alt="ikon">
+                        </div>
+                        <span class="icon__text">Podepíšeme smlouvu a nakoupíme materiál za výhodnou cenu</span>
+                    </div>
+                    <div class="icon">
+                        <div class="icon__image">
+                            <img src="img/item4.png" alt="ikon">
+                        </div>
+                        <span class="icon__text">Provádíme opravy v uvedeném termínu</span>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <div class="notice">
+            <div class="container">
+                <h2 class="notice__text">Oprava Vás bude stát levněji, protože používáme kvalitní materiály za velkoobchodní ceny</h2>
+            </div>
+        </div>
+
     </main>
 
     <div class="modal" id="modal">
