--- a/src/index.html
+++ b/src/index.html
@@ -220,11 +220,69 @@
 
         </section>
 
-        <div class="notice">
+        <section class="notice">
             <div class="container">
                 <h2 class="notice__text">Oprava Vás bude stát levněji, protože používáme kvalitní materiály za velkoobchodní ceny</h2>
             </div>
-        </div>
+        </section>
+
+        <section class="info">
+            <div class="container">
+                <div class="benefits info__block">
+                    <div class="benefit">
+                        <span class="benefit__text">Pomůžeme vám zakoupit veškeré 
+                            materiály za velkoobchodní ceny 
+                            u prověřených dodavatelů</span>
+                        <img class="benefit__image" src="img/benefit-bg.png" alt="muz">
+                    </div>
+
+                    <div class="benefit">
+                        <span class="benefit__text">Uděláme Vám <strong>maximální slevu</strong> u našich partnerů na nákup materiálů</span>
+                        <img class="benefit__image" src="img/benefit-bg.png" alt="muz">
+                    </div>
+
+                    <div class="benefit">
+                        <span class="benefit__text">Vše, co nedokážete najít v obchodech - pomůžeme objednat <strong>u prověřených dodoavaelů</strong></span>
+                        <img class="benefit__image" src="img/benefit-bg.png" alt="muz">
+                    </div>
+
+                </div>
+
+                <div class="documnets">
+                    <h2 class="section-title documents__title">Všechny naše povinnosti jsou <br> detailně propsané ve smlouvě</h2>
+                    <div class="documents-block">
+                        <div class="documents-block__item">
+                            <div class="doocuments-block__image">
+                                <img src="img/dokument1.png" alt="dokument1">
+                            </div>
+                            <div class="documents-block__text">
+                                Záruka kvality <br> provedené práce
+                            </div>                        
+                        </div>
+                     
+                    
+                        <div class="documents-block__item">
+                            <div class="doocuments-block__image">
+                                <img src="img/dokument2.png" alt="dokument2">
+                            </div>
+                            <div class="documents-block__text">
+                                Záruka na fixované ceny <br> Druhy práce a jejich ceny <br> jsou propsané ve smlouvě
+                            </div>                        
+                        </div>
+                        <div class="documents-block__item">
+                            <div class="doocuments-block__image">
+                                <img src="img/dokument3.png" alt="dokument3">
+                            </div>
+                            <div class="documents-block__text">
+                                Garance na přesné dodržení <br> termínů a zodpovědnosti <br> za nesplnění
+                            </div>                        
+                        </div>
+                    </div>             
+                </div>
+            </div>
+
+
+        </section>
 
     </main>
 
